$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.12-9 (opened April 6, 2008)

	* ordiArrowMul: added function 'ordiArrowMul' to improve automatic
	scaling of biplot arrows (in plot.cca, text.cca, points.cca) and
	fitted vectors (in plot.envfit). Reversed axes 'xlim=c(1,-1)' work
	now, and shifted origin 'at = c(1,1)' taken into account in
	plot.envfit. 
	
Version 1.12-8 (closed April 6, 2008)

	* permute: New high-level untility function for facilitating
	the production of permutation tests using the new permutation
	designs allowed by permuted.index2(). An example of the new
	API is shown in ?permute.

	* permutest.betadisper: Pairwise t test function made more
	computationally stable.
	
Version 1.12-7 (closed Mar 30, 2008)

	* permuplot: New function, produces a graphical representation
	of a permutation design given a number of observations and a
	object returned by permControl(). The function handles all the
	permutation designs currently handled by permuted.index2().

	* permuted.index2: was not returning correct sample indices
	for grid designs within strata. Also, was not consitently 
	mirroring series and grid designs when 'constant = TRUE' (i.e. 
	mirroring was not applied the same way within each level of 
	strata).

	* permCheck: Now includes several sanity checks for balance
	in permutation designs ('grid' & 'strata') and when using
	same permutation in each level of 'strata' (constant = TRUE).
	Also works if object is a (numeric or integer) vector of length 
	1, by expanding it to seq(from = 1, to = object). This is now
	in-line with the way numPerms works.

	New argument 'make.all' in permCheck() allows greater control
	over the checking process. Allows user to check a permutation
	design without generating the matrix of all possible permutations.
	Used in allPerms() to allow that function to check permutation 
	designs without getting stuck in infinite recursion, as permCheck()